# ChangeLog file for MonetDB
# This file is updated with Maddlog

* Fri Feb 17 2017 Sjoerd Mullender <sjoerd@acm.org>
- Quantiles calculate a position in the sorted column.  If this position
  is not an integer, we now choose the nearest position, favoring the
  lower if the distance to the two adjacent positions is equal (round
  down to nearest integer).

* Mon Jan 30 2017 Sjoerd Mullender <sjoerd@acm.org>
- Removed function BATprintf.  Use BATprint or BATprintcolumns instead.
- Removed BATsave from the list of exported functions.

* Tue Jan  3 2017 Sjoerd Mullender <sjoerd@acm.org>
- Replaced BBPincref/BBPdecref with BBPfix/BBPunfix for physical reference
  count and BBPretain/BBPrelease for logical reference count maintenance.

* Fri Dec 16 2016 Sjoerd Mullender <sjoerd@acm.org>
- Removed automatic conversion of 32-bit OIDs to 64 bits on 64-bit
  architectures.

* Tue Dec 13 2016 Sjoerd Mullender <sjoerd@acm.org>
- Removed functions OIDbase() and OIDnew().
- Removed talign field from BAT descriptor.

* Mon Dec  5 2016 Sjoerd Mullender <sjoerd@acm.org>
- BATappend now takes an optional (NULL if not used) candidate list for
  the to-be-appended BAT.

* Thu Dec  1 2016 Sjoerd Mullender <sjoerd@acm.org>
- New function BATkeyed(BAT *b) that determines (possibly using a hash
  table) whether all values in b are distinct.
