@@ -98,7 +98,7 @@ Ready.
 % schema,	table,	column,	type,	mode,	count,	hashes,	phash,	imprints,	sorted,	orderidx # name
 % clob,	clob,	clob,	clob,	clob,	bigint,	bigint,	boolean,	bigint,	boolean,	bigint # type
 % 3,	5,	1,	3,	8,	2,	1,	5,	1,	5,	3 # length
-[ "sys",	"xtmp1",	"i",	"int",	"readonly",	12,	0,	false,	0,	false,	112	]
+[ "sys",	"xtmp1",	"i",	"int",	"readonly",	12,	0,	false,	0,	false,	120	]
 #SELECT * FROM xtmp1 WHERE i<0;
 % sys.xtmp1 # table_name
 % i # name
