@@ -88,7 +88,7 @@ Ready.
 % schema,	table,	column,	type,	mode,	count,	hashes,	phash,	imprints,	sorted,	orderidx # name
 % clob,	clob,	clob,	clob,	clob,	bigint,	bigint,	boolean,	bigint,	boolean,	bigint # type
 % 3,	5,	1,	3,	8,	1,	1,	5,	1,	5,	2 # length
-[ "sys",	"xtmp4",	"i",	"int",	"readonly",	3,	0,	false,	0,	false,	40	]
+[ "sys",	"xtmp4",	"i",	"int",	"readonly",	3,	0,	false,	0,	false,	48	]
 #SELECT * FROM xtmp4 WHERE i>=0 AND i<8;
 % sys.xtmp4 # table_name
 % i # name
